Fix overflow causing double scroll
This seems to fix this issue #112

--- a/client/src/styles/bundle.scss
+++ b/client/src/styles/bundle.scss
@@ -2,6 +2,9 @@ div.field.display-logic-hidden,
 div.displaylogicwrapper.display-logic-hidden {
 	display:none;
 }
+div.displaylogicwrapper.display-logic {
+    position: relative;
+}
 
 @media (min-width: 992px) {
 
